# sm64_bully_movement_v2

./: .gitignore  BullyPath.cpp  BullyPath.hpp  CMakeLists.txt  PathSearch.cpp  PathSearch.hpp  README.md  Surface.cpp  SurfaceUtils.cpp  SurfaceUtils.hpp  Trig.cpp  Trig.hpp  WallsFloors.cpp  WallsFloors.hpp  main.cpp  vmath.cpp  vmath.hpp
cmake/: march_native.cmake
